# enclosure

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
.enclosure/: enclosure.yaml
.enclosure/recipes/module-basic/: recipe.yaml
.enclosure/recipes/module-packaged/: recipe.yaml
.enclosure/rules/local/: INDEX.md
.github/: release.yml
.github/workflows/: ci.yml  release.yml
docs/modules/: architecture-boundaries.md  architecture-clusters.md  architecture-health.md  architecture-map.md  architecture-shape.md  health-report.md  workspace-health.md  workspace-plan.md  workspace-recipe.md  workspace-rules.md  workspace-sync.md
docs/repo/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
libraries/code_map/: README.md  pyproject.toml  show_test_source_files.py
libraries/code_map/src/code_map/: __init__.py
libraries/code_map/src/code_map/architecture/: matching.py  policy.py
libraries/code_map/tests/: test_api.py  test_architecture_api.py  test_standalone.py
scripts/: bench_modwire.py  generate_module_docs.py
src/enclosure/: __init__.py  __main__.py  _version.py
src/enclosure/resources/: copilot-instructions.md  enclosure.yaml
src/enclosure/shared/: architecture.py  architecture_code.py  architecture_code_cache.py  config.py  layout.py  limits.py  naming.py  templates.py  (+1 more)
tests/: README.md  conftest.py
tests/features/: __init__.py
tests/shared/: test_architecture_code_cache.py  test_config.py  test_layout.py  test_ui.py
tests/support/: projects.py  test_fixture_projects.py
tests/ui/: __init__.py  test_command_docs.py
(+178 files in other folders)
